--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shahry-sdk",
   "description": "SDK for Shahry Payment Gateway",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "engineStrict": true,
   "engines" : { "node" : ">=8" },
